format + keep it shy

--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -32,24 +32,20 @@
       </li>
       <li> Don't Live with Broken Windows
         <ul>
-          <li>Wenn du schlechten, unlesbaren,<br />
-            ungetesteten Code findest mach ihn<br />
+          <li>Wenn du schlechten, unlesbaren, ungetesteten Code findest mach ihn
             besser!<br />
           </li>
         </ul>
       </li>
       <li> Leuchtspur Munition
         <ul>
-          <li>Verwende Prototypen um die Intention<br />
-            des Kunden herauszufinden<br />
+          <li>Verwende Prototypen um die Intention des Kunden herauszufinden<br />
           </li>
         </ul>
       </li>
       <li> Crash Early<br />
         <ul>
-          <li>Ein Programm bei Fehlern lieber<br />
-            kontrolliert beenden, als in einen<br />
-          unkontrollierbaren zustand bringen</li>
+          <li>Ein Programm bei Fehlern lieber kontrolliert beenden, als in einen unkontrollierbaren zustand bringen</li>
         </ul>
       </li>
       <li> Find Bugs Once
@@ -60,19 +56,20 @@
       </li>
       <li> Keep it shy
         <ul>
-          <li></li>
+          <li>The best code is very shy. Like a four-year old hiding behind a mother’s skirt, code shouldn’t reveal too much of itself and shouldn’t be too nosy into others affairs.</li>
         </ul>
       </li>
-      <li> open closed principle
-        <ul>
-          <li> (&quot;Offen-Geschlossen Prinzip&quot;, kurz OCP) ist ein Prinzip beim Objektorientierten Entwurf von Software. Es beschäftigt sich mit der Erweiterbarkeit von bestehender Software.<br />
-            Im allgemeinen wird das OCP beschrieben durch:<br />
-            Software-Einheiten sollten offen für Erweiterungen, aber geschlossen für Modifikationen sein.<br />
-            Mit Software-Einheiten sind hier Module, Klassen, Methoden etc. gemeint. Eine Erweiterung in diesem Sinne verändert das vorhandene Verhalten der Einheit nicht, vielmehr erweitert es die Einheit nur zusätzliche Funktionen oder Daten. Eine Modifikation hingegen, würde das bisherige Verhalten der Einheit ändern.<br />
-          </li>
-        </ul>
+      <li>So remember to &quot;keep it DRY, keep it shy and tell the other guy&quot;</li>
+      <li>open closed principle
+  <ul>
+    <li> (&quot;Offen-Geschlossen Prinzip&quot;, kurz OCP) ist ein Prinzip beim Objektorientierten Entwurf von Software. Es beschäftigt sich mit der Erweiterbarkeit von bestehender Software.<br />
+      Im allgemeinen wird das OCP beschrieben durch:<br />
+      Software-Einheiten sollten offen für Erweiterungen, aber geschlossen für Modifikationen sein.<br />
+      Mit Software-Einheiten sind hier Module, Klassen, Methoden etc. gemeint. Eine Erweiterung in diesem Sinne verändert das vorhandene Verhalten der Einheit nicht, vielmehr erweitert es die Einheit nur zusätzliche Funktionen oder Daten. Eine Modifikation hingegen, würde das bisherige Verhalten der Einheit ändern.<br />
+      </li>
+  </ul>
         <br />
-    </li>
+      </li>
     </ul>
   </li>
   <li><strong>graphiken anschauen (hudson testen)</strong>
@@ -80,7 +77,7 @@
       <li><img src="aufbau_cis.png" ></li>
     </ul>
   </li>
-  <li><strong>automatisierung (was sollte man automatisieren (wie weit))</strong><br />
+  <li><strong class="red">automatisierung (was sollte man automatisieren (wie weit))</strong><br />
   </li>
   <li><strong>Unit-Tests</strong>
     <ul>
