--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -14,6 +14,11 @@
 </style>
 </head>
 <body style="margin: 2cm; direction: ltr; max-width: 20.999cm;">
+<fieldset style="border:">
+  <legend><strong>legende</strong></legend>
+format: <span class="red">rot</span> = unbewantwortet oder schlecht<br />
+  durchgestrichen = frage ausreichend beantwortet
+</fieldset>
 <h1>Rambow</h1>
 <ul>
   <li><strong>!!!!abkuerzungen !!!!</strong>
@@ -139,11 +144,11 @@
         <ul>
           <li> Benutzung des VCS und stänige Updates des<br />
             Codes der Anderen<br />
-            </li>
+          </li>
           <li> Der PushButton/ant-triggered-Build, der letzten<br />
             Vorlesungen muss nun automatisch und<br />
             kontinuierlich ausgeführt werden soll.<br />
-            </li>
+          </li>
         </ul>
       </li>
       <li> Dadurch werden Integrationsprobleme, wie<br />
@@ -240,8 +245,7 @@
   </li>
 </ul>
 <h1>Themenliste
-  f&uuml;r Klausur</h1>
-<h1>Gabriele
+  f&uuml;r Klausur Gabriele
   Schmidt</h1>
 <p>kopie aus pdf:</p>
 <p>Themenliste für Klausur<br />
