--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -16,8 +16,8 @@
 <body style="margin: 2cm; direction: ltr; max-width: 20.999cm;">
 <fieldset style="border:">
   <legend><strong>legende</strong></legend>
-format: <span class="red">rot</span> = unbewantwortet oder schlecht<br />
-  durchgestrichen = frage ausreichend beantwortet
+ <span class="red">rot</span> = unbewantwortet oder schlecht<br />
+ <s> durchgestrichen</s> = frage ausreichend beantwortet
 </fieldset>
 <h1>Rambow</h1>
 <ul>
@@ -77,7 +77,7 @@ format: <span class="red">rot</span> = unbewantwortet oder schlecht<br />
       </li>
     </ul>
   </li>
-  <li><strong>graphiken anschauen (hudson testen)</strong>
+  <li><strong class="red">graphiken anschauen (hudson testen)</strong>
     <ul>
       <li><img src="aufbau_cis.png" ></li>
     </ul>
@@ -413,8 +413,27 @@ zu erf&uuml;llen.</p>
   Qualit&auml;t wichtig?</h2>
 <p><strong>siehe: Wie wirkt sich fehlende
 Software-Qualit&auml;t aus?</strong></p>
-<h2>Qualit&auml;tsmanagement<strong></strong></h2>
-<h2 class="red">Aufgaben eine Qualit&auml;tsbeauftragten</h2>
+<h2>Qualit&auml;tsmanagement</h2>
+<strong>Aufgaben eine Qualit&auml;tsbeauftragten</h2>
+</strong>
+<ul>
+  <li>ein Qualitätsmanagementsystem (= Organisationssystem) für die Einrichtung aufzubauen bzw. aufrechtzuerhalten und</li>
+  <li>interne Audits durchzuführen, um die Wirksamkeit des Organisationssystems zu überprüfen.</li>
+  <li>Mitarbeiter anzuleiten und Gruppenarbeitstechniken und Problemlösetechniken anzuwenden,</li>
+  <li>auf Kollegen und Vorgesetzte zuzugehen und Hinweise bezüglich des QMSystems (Organisationssystem) zu geben oder einzuholen,</li>
+  <li>fach- und bereichsübergreifende Lösungen für die Organisation im Team mit anderen zu entwickeln.</li>
+  <li>Herausgabe, Aktualisierung und Verteilung des Qualitätsmanagement-Handbuchs sowie Führen einer Verteilerliste,</li>
+  <li>Entgegennahme und Prüfung von Änderungs- oder Ergänzungswünschen zum Qualitätsmanagement-Handbuch,</li>
+  <li>Freigabe und Verteilung der mitgeltenden Unterlagen nach Überprüfung auf Konformität innerhalb des Qualitätsmanagement-Systems,</li>
+  <li>Durchführung von Qualitätsaudits und Berichterstattung an die Geschäftsführung,</li>
+  <li>Mitwirkung bei der Überwachung aller Prozesse,</li>
+  <li>ständige Sammlung von Daten zur Überwachung der Wirksamkeit der Quali tätspolitik und der Qualitätsziele, auch um Managementbewertungen durch die Geschäftsführung vorzubereiten,</li>
+  <li>Vereinbarung von Problemlösungen mit dem jeweils Prozeßverantwortlichen und Überwachung der Realisierung,</li>
+  <li>Analyse interner und externer Beanstandungen/Reklamationen, Koordination von Korrektur- und Vorbeugemaßnahmen und Überwachung ihrer Wirksamkeit,</li>
+  <li>Motivation der Mitarbeiter und permanente Vorantreibung des internen Qualitätsverbesserungsprozesses, </li>
+  <li>Überwachung der Lenkung aller Dokumente und Daten,</li>
+  <li>Ausarbeitung und Veranlassung von Vorbeugemaßnahmen gegen mögliche Fehler.</li>
+</ul>
 <h2>Was sind
   Qualit&auml;tsmerkmale?</h2>
 <ul>
